# videogenevalkit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: pull_request_template.md
.github/workflows/: build-and-push.yml  (+2 more)
LICENSES/: README.md
docs/: DEV_MANUAL.md  INTEGRATION_FRAMEWORK_DESIGN.md  PRODUCT_DESIGN.md  TEST_MANUAL.md  USER_MANUAL.md  USER_MANUAL.zh.md  USER_MANUAL_cn.md  USER_MANUAL_en.md  VIDEO_METRICS_DESIGN.md  citations.bib  index.md  index.zh.md
envs/: condaenv.xjm8cxdz.requirements.txt  requirements-lock.txt  videvalkit-npu.yaml  videvalkit.yaml
examples/: README.md  judges.yaml.example  run_worldjen_smoke.sh
scripts/: auto_label_prompts.py  build_image.sh  build_quick_subset.py  calibrate_phas.py  check_design_doc_consistency.py  check_doc_links.py  check_pr_template_filled.py  cross_report.py  npu_smoke.py  post_install.sh  post_install_npu.sh  run_smoke_videobench.py  run_smoke_worldjen.py  setup_ckpt_dir.sh  worldscore_full_10dim_smoke.py  worldscore_full_corpus_eval.py
tests/: test_alignment_metrics.py  test_artifact_diagnostic.py  test_capability_cli.py  test_capability_eval.py  test_capability_taxonomy.py  test_cli_gpus_shard.py  test_device_resolve.py  test_distribution_metrics.py  test_doctor_enhance.py  test_fvd_i3d_loader.py  test_fvd_s3d_fallback.py  test_fvd_vfid_functional.py  test_integration.py  test_integration_extra.py  test_judge_adhoc_cli.py  test_judge_resolution.py  test_judges_yaml.py  test_kvd_clipfvd.py  test_manifest_benchmark.py  test_metric_cli_refs.py  test_metric_liftouts.py  test_metric_liftouts_t2vcomp.py  test_new_benchmarks_smoke.py  test_no_judge_filter.py  test_plugin_loader.py  test_profile_subset.py  test_prompt_aligned_fvd.py  test_prompts_dump.py  test_review_ci_scripts.py  test_runner_external_videos.py  test_runner_profile.py  test_skeleton.py  test_training_monitor.py  test_vbench_quick_subset.py  test_videomae_backbone.py
(+183 files in other folders)
